--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -2,9 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    .header__title {
-        color: #fff;
-    }
+    height: 100vh;
     .gnb {
         display: flex;
         width: 100%;
@@ -34,15 +32,33 @@
             }
         }
     }
+    .header__title {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+        padding-bottom: 2rem;
+        color: #fff;
+        font-family: LotteMartDream;
+        font-size: 5rem;
+        text-shadow: 0 0 17px rgba(0,0,0,.5), 0 0 5px rgba(27,188,255,.8)
+    }
     .header__image {
         position: absolute;
         top: 0; right: 0; bottom: 0; left: 0;
         height: 100vh;
         width: 100%;
-        background: url(../images/main_sky.jpg) no-repeat center center;
-        background-size: cover;
         z-index: -1;
-        -webkit-filter: blur(0.15em);
-        filter: blur(0.15em);
+        overflow: hidden;
+        div {
+            width: 105%;
+            height: 105%;
+            margin: -5% 0 0 -5%;
+            background: url(../images/main_sky.jpg) no-repeat center center;
+            background-size: cover;
+            -webkit-filter: blur(0.15em);
+             filter: blur(0.15em);
+        }
     }
 }
